# newtype-tools

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  TODO.md  rust-toolchain.toml
.github/: dependabot.yaml
.github/workflows/: cd.yaml  ci.yaml  ci.yml  code-coverage.yaml  code-coverage.yml  lint-pr.yaml  lint-pr.yml  (+2 more)
newtype-tools/: CHANGELOG.md  Cargo.toml
newtype-tools-derive/: CHANGELOG.md  Cargo.toml  README.md
newtype-tools-derive/src/: expand.rs  lib.rs  parse.rs
newtype-tools-derive/src/parse/: tests.rs
newtype-tools/src/: iter.rs  lib.rs
newtype-tools/src/iter/: tests.rs
newtype-tools/tests/: add.rs  add_assign.rs  bitand.rs  bitand_assign.rs  bitor.rs  bitor_assign.rs  bitxor.rs  bitxor_assign.rs  div.rs  div_assign.rs  from.rs  into.rs  iter.rs  iter_trait.rs  mul.rs  mul_assign.rs  newtype.rs  newtype_amount.rs  newtype_derive.rs  newtype_id.rs  ops.rs  partial_eq.rs  range_iter.rs  rem.rs  rem_assign.rs  shl.rs  shl_assign.rs  shr.rs  shr_assign.rs  sub.rs  sub_assign.rs  trybuild.rs
newtype-tools/tests/newtype-fail/: enum.rs  enum.stderr  newtype-list.stderr  newtype-name-value.rs  newtype-name-value.stderr  newtype-nested-name-value.stderr  newtype-nested-path-from.stderr  newtype-nested-path-invalid.stderr  newtype-path.stderr  struct-named.stderr  struct-tuple.rs  struct-tuple.stderr  struct-unit.rs  struct-unit.stderr  struct.rs  struct.stderr  union.rs  union.stderr
newtype-tools/tests/ops/: add.rs  bitand.rs  bitor.rs  bitxor.rs  div.rs  mul.rs  rem.rs  shl.rs  shr.rs  sub.rs
newtype-tools/tests/trybuild/: add.stderr  add_assign.stderr  enum.stderr  from.stderr  into.rs  into.stderr  newtype-list.stderr  newtype-name-value.stderr  newtype-nested-name-value.rs  newtype-nested-name-value.stderr  newtype-nested-path-from.stderr  newtype-nested-path-invalid.stderr  newtype-path.stderr  newtype_attribute.rs  newtype_attribute.stderr  newtype_derive.rs  newtype_derive.stderr  partial_eq.rs  partial_eq.stderr  struct-named.stderr  struct-tuple.stderr  struct-unit.stderr  sub.rs  sub.stderr  sub_assign.stderr  try_from.rs  try_from.stderr  try_into.stderr  union.stderr
newtype-tools/tests/trybuild/conversions/: from.rs  from.stderr  into.stderr  try_from.stderr  try_into.rs  try_into.stderr
newtype-tools/tests/trybuild/newtype/: enum.rs  enum.stderr  named-struct.rs  named-struct.stderr  struct-list-invalid.rs  struct-list-invalid.stderr  struct-list-name-value.stderr  struct-list-path-invalid.rs  struct-list-path-invalid.stderr  struct-list-path-valid.rs  struct-list-path-valid.stderr  struct-name-value.stderr  struct-path.rs  struct-path.stderr  tuple-struct.stderr  union.rs  union.stderr  unit-struct.stderr
newtype-tools/tests/trybuild/ops/: add.rs  add.stderr  add_assign.rs  add_assign.stderr  bitand.rs  bitand.stderr  bitand_assign.rs  bitand_assign.stderr  bitor.rs  bitor.stderr  bitor_assign.rs  bitor_assign.stderr  bitxor.rs  bitxor.stderr  bitxor_assign.rs  bitxor_assign.stderr  div.rs  div.stderr  div_assign.rs  div_assign.stderr  mul.rs  mul.stderr  mul_assign.rs  mul_assign.stderr  partial_eq.stderr  rem.rs  rem.stderr  rem_assign.rs  rem_assign.stderr  shl.rs  shl.stderr  shl_assign.rs  shl_assign.stderr  shr.rs  shr.stderr  shr_assign.rs  shr_assign.stderr  sub.stderr  sub_assign.rs  sub_assign.stderr
