[workspace]
members = ["newtype-tools", "newtype-tools-derive"]
resolver = "2"

[workspace.package]
authors = ["Andriy Berestovskyy <berestovskyy@gmail.com>"]
categories = [
    "algorithms",
    "data-structures",
    "development-tools",
    "development-tools::procedural-macro-helpers",
    "rust-patterns",
]
description = "A lightweight library designed to make the newtype idiom more ergonomic to use."
edition = "2024"
homepage = "https://github.com/berestovskyy/newtype-tools"
keywords = ["conversion", "derive", "idiom", "iterator", "newtype"]
license = "MIT OR Apache-2.0"
readme = "newtype-tools/README.md"
repository = "https://github.com/berestovskyy/newtype-tools"
rust-version = "1.86.0"
version = "0.1.0-beta"

[workspace.dependencies]
newtype-tools-derive = { version = "0.1.0-beta", path = "newtype-tools-derive" }
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["extra-traits", "full"] }
