[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "newtype-tools"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]

[dependencies]
newtype-tools-derive = { path = "../newtype-tools-derive", optional = true }

[features]
default = ["derive"]
derive = ["dep:newtype-tools-derive"]
