[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "newtype-tools"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[dependencies]
newtype-tools-derive = { workspace = true, optional = true }

[dev-dependencies]
newtype-tools-derive = { workspace = true }
trybuild = { workspace = true }

[features]
default = ["derive"]
derive = ["dep:newtype-tools-derive"]
